# FreelanceSim

./: .gitignore  README.md  pyproject.toml
freelance_sim/: cli.py  simulateur.py  statuts.py  utils.py
freelance_sim/tests/: test_ir.py  test_statuts.py
